# rinha-rust-tree

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.pt.md  build.rs  docker-compose.yml  info.json
.github/workflows/: publish-image.yml  rust-ci.yml
docker/: Dockerfile  compose.local.yml  compose.submission.yml
docs/: ARCHITECTURE.md  ARQUITETURA.md
src/: lib.rs  runtime.rs
src/api/: handler.rs  mod.rs  server.rs  warmup.rs
src/fd_passing/: conn.rs  epoll.rs  evented.rs  io.rs  mod.rs
src/http/: mod.rs  parser.rs  responses.rs
src/index/: build.rs  format.rs  layout.rs  mmap.rs  mod.rs  partition_scheme.rs  search.rs  tests.rs
src/lb/: main.rs
src/vector/: compact.rs  helpers.rs  mod.rs  serde_fallback.rs  single_pass.rs  tests.rs
